# thorpat-django

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.Base  Dockerfile.Django  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/thorpat/: celery.py  urls.py  wsgi.py
backend/thorpat/api/: exception_handler.py  renderers.py
backend/thorpat/api/v1/: urls.py  utils.py
backend/thorpat/api/v1/activitylog/: serializers.py  urls.py  views.py
backend/thorpat/api/v1/auth/: views.py
backend/thorpat/api/v1/cart/: serializers.py  urls.py  views.py
backend/thorpat/api/v1/catalogue/: serializers.py  urls.py  views.py
backend/thorpat/api/v1/order/: serializers.py  urls.py  views.py
backend/thorpat/api/v1/partner/: serializers.py  urls.py  views.py
backend/thorpat/api/v1/profiles/: routers.py  serializers.py  urls.py  views.py
backend/thorpat/api/v1/reviews/: serializers.py  urls.py  views.py
backend/thorpat/api/v1/users/: routers.py  serializers.py  urls.py  views.py
backend/thorpat/apps/activitylog/: models.py
backend/thorpat/apps/activitylog/migrations/: 0001_initial.py  0003_alter_activitylog_table.py
backend/thorpat/apps/cart/: admin.py  apps.py  models.py  utils.py
backend/thorpat/apps/cart/migrations/: 0001_initial.py  0002_initial.py  0003_alter_cart_table_alter_cartline_table.py
backend/thorpat/apps/catalogue/: urls.py  views.py
backend/thorpat/apps/catalogue/migrations/: 0001_initial.py  0003_stockrecord_cost_price_and_more.py  0005_rename_partner_sku_stockrecord_sku.py
backend/thorpat/apps/checkout/: forms.py  urls.py  views.py
backend/thorpat/apps/dashboard/: urls.py
backend/thorpat/apps/dashboard/category/: urls.py  views.py
backend/thorpat/apps/dashboard/order/: urls.py
backend/thorpat/apps/dashboard/product/: urls.py
backend/thorpat/apps/dashboard/users/: views.py
backend/thorpat/apps/order/: abstract.py  urls.py  views.py
backend/thorpat/apps/order/migrations/: 0004_alter_order_status.py
backend/thorpat/apps/partner/: admin.py  forms.py  models.py
backend/thorpat/apps/partner/migrations/: 0001_initial.py
backend/thorpat/apps/profiles/: factories.py
backend/thorpat/apps/profiles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_address_table.py
backend/thorpat/apps/reviews/: urls.py
backend/thorpat/apps/users/: filters.py  forms.py  models.py  signals.py  urls.py  views.py
backend/thorpat/apps/users/migrations/: 0001_initial.py  0002_alter_user_table.py
backend/thorpat/core/: middleware.py
backend/thorpat/settings/: __init__.py  base.py  db.py  dev.py
backend/thorpat/static/js/: base_layout.js  dashboard_update_profile.js  htmx_csrf_config.js
backend/thorpat/tasks/: __init__.py  email.py
backend/thorpat/templates/: base.html
backend/thorpat/templates/account/: login.html  logout.html  password_reset_complete.html  password_reset_confirm.html
backend/thorpat/templates/catalogue/: product_detail.html
backend/thorpat/templates/checkout/partials/: _new_address_form.html
backend/thorpat/templates/dashboard/: base_list.html
backend/thorpat/templates/dashboard/category/: list.html
backend/thorpat/templates/dashboard/customer/: confirm_delete.html  detail.html  list.html
backend/thorpat/templates/dashboard/order/: list.html
backend/thorpat/templates/order/: order_detail.html  order_list.html
backend/thorpat/templates/profiles/: detail.html
backend/thorpat/templatetags/: currency_filters.py  form_filters.py
frontend/shared/src/api/: api.js  auth.js  products.js  users.js
frontend/web/: Dockerfile  nginx.conf  package.json  tailwind.config.js
frontend/web/src/: main.jsx
frontend/web/src/context/: AuthContext.jsx
frontend/web/src/layouts/: App.jsx
frontend/web/src/screens/: Dashboard.jsx  ForgotPasswordScreen.jsx  LoginScreen.jsx  ProductsScreen.jsx  RegisterScreen.jsx  ResetPasswordConfirmScreen.jsx  UsersScreen.jsx  index.js
src/: manage.py
src/thorpat/: __init__.py  asgi.py  celery.py  urls.py  views.py
src/thorpat/api/: authentication.py  exception_handler.py
src/thorpat/api/v1/: urls.py  utils.py
src/thorpat/api/v1/auth/: routers.py  (+2 more)
src/thorpat/apps/: urls.py
src/thorpat/apps/activitylog/: models.py
src/thorpat/apps/cart/: admin.py  forms.py  models.py  urls.py  views.py
src/thorpat/apps/catalogue/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
src/thorpat/apps/checkout/: urls.py  views.py
src/thorpat/apps/dashboard/: management_views.py  urls.py
src/thorpat/apps/order/: admin.py  models.py  urls.py  utils.py  views.py
src/thorpat/apps/partner/: models.py
src/thorpat/apps/profiles/: admin.py  factories.py  filters.py  models.py
src/thorpat/apps/reviews/: forms.py  models.py  views.py
src/thorpat/apps/users/: admin.py  apps.py  factories.py  forms.py  manager.py  models.py  urls.py  views.py
src/thorpat/core/: context_processors.py  schema.py
src/thorpat/rest_api/: api.py  auth.py  exception_handlers.py  utils.py
src/thorpat/rest_api/schemas/: auth.py  base_schemas.py  profiles.py  token.py  users.py
src/thorpat/rest_api/v1/: router.py  users.py
src/thorpat/settings/: base.py  dev.py
src/thorpat/static/css/: custom.css
src/thorpat/static/js/: cart.js  dashboard_info_charts.js  dashboard_layout.js  product_form.js
src/thorpat/tasks/: email.py
src/thorpat/templates/: base.html  home.html
src/thorpat/templates/account/: login.html  logout.html  password_reset.html  password_reset_done.html  signup.html
src/thorpat/templates/cart/: detail.html
src/thorpat/templates/catalogue/: product_detail.html  product_list.html
src/thorpat/templates/checkout/: payment_method.html  shipping_address.html  thank_you.html
src/thorpat/templates/dashboard/: base_dashboard.html
src/thorpat/templates/emails/: password_reset_email.html
src/thorpat/templates/order/: order_detail.html  order_list.html
src/thorpat/templates/pages/: login.html
src/thorpat/templates/profiles/: update.html
src/thorpat/templatetags/: form_filters.py
(+102 files in other folders)
